ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    # config http
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"

spec:
  ingressClassName: traefik # reverse proxy
  rules:
    - host: "api-duniabelanja.krobot.my.id"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 80
    - host: "admin-duniabelanja.krobot.my.id"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 80
